js code is finished, need to style it.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
         <button class="calculator-operator" value="divide">/</button>
         <button class="calculator-operator" value="multiply">*</button>
 
+        <button class="calculator-float">.</button>
+
         <button class="calculator-control" id="calculator-equals">=</button>
-        <button class="calculator-control">AC</button>
+        <button class="calculator-control" id="calculator-clear">AC</button>
+        <button class="calculator-control" id="calculator-back">Back</button>
+
     </div>
 
     <script src="app.js"></script>
